# autocvlac

./: .gitignore  LICENSE  README.md  autocvlac.ipynb  autodillcvlac.ipynb  check_github.ipynb  pyproject.toml
.github/workflows/: publish-pypi.yml  test.yml
autocvlac/: __init__.py  core.py
autofillcvlac/: __init__.py  core.py
tests/: test_autocvlac.py  test_autofillcvlac.py  test_publish_workflow.py
