[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autofillcvlac"
version = "0.1.19"
description = "A Python package for processing research data and CVLaC information"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "autofillcvlac contributors"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.25.0",
    "pandas>=1.3.0",
    "helium>=5.1.0",
]

[project.urls]
"Homepage" = "https://github.com/restrepo/autofillcvlac"
"Bug Reports" = "https://github.com/restrepo/autofillcvlac/issues"
"Source" = "https://github.com/restrepo/autofillcvlac"

[tool.setuptools.packages.find]
where = ["."]
include = ["autofillcvlac*"]
